--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.0",
+    "@types/react": "^17.0.11",
     "typescript": "^4.1.2",
     "vite": "^2.2.3"
   }
