--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@preact/preset-vite": "^2.1.0",
     "@types/react": "^17.0.11",
     "typescript": "^4.1.2",
-    "vite": "^2.2.3"
+    "vite": "^2.2.3",
+    "vite-plugin-compression": "^0.3.0"
   }
 }
