--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "postbuild": "workbox generateSW workbox-config.js"
   },
   "dependencies": {
     "nanostores": "^0.3.3",
@@ -16,6 +17,7 @@
     "@types/react": "^17.0.11",
     "typescript": "^4.1.2",
     "vite": "^2.2.3",
-    "vite-plugin-compression": "^0.3.0"
+    "vite-plugin-compression": "^0.3.0",
+    "workbox-cli": "^6.1.5"
   }
 }
