--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "postbuild": "workbox generateSW workbox-config.js"
+    "postbuild": "workbox generateSW workbox-config.js",
+    "lint": "eslint --ext js,jsx,ts,tsx src",
+    "lint:fix": "eslint --fix --ext js,jsx,ts,tsx src"
   },
   "dependencies": {
     "nanostores": "^0.3.3",
@@ -15,6 +17,7 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.1.0",
     "@types/react": "^17.0.11",
+    "eslint": "^8.31.0",
     "typescript": "^4.1.2",
     "vite": "^2.2.3",
     "vite-plugin-compression": "^0.3.0",
