--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.1.0",
     "@types/react": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11",
     "typescript": "^4.1.2",
     "vite": "^2.2.3",
     "vite-plugin-compression": "^0.3.0",
